cleanup android lint warnings (more to go)